# ChangeLog for net-nntp/leafnode
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/leafnode/ChangeLog,v 1.35 2011/07/31 12:34:45 patrick Exp $

*leafnode-1.11.8 (31 Jul 2011)

  31 Jul 2011; Patrick Lauer <patrick@gentoo.org> -leafnode-1.11.6.ebuild,
  -leafnode-1.11.7.ebuild, +leafnode-1.11.8.ebuild:
  Bump, remove old

  14 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -leafnode-2.0.0_alpha20070108.ebuild:
  Remove alpha verion that is masked since 2005 and not updated.

*leafnode-1.11.7 (22 Oct 2009)

  22 Oct 2009; Patrick Lauer <patrick@gentoo.org> +leafnode-1.11.7.ebuild:
  Bump, fixes #288713

  20 Jun 2008; Sven Wegener <swegener@gentoo.org>
  leafnode-2.0.0_alpha20070108.ebuild:
  Add ~amd64 keyword.

  20 Jun 2008; Sven Wegener <swegener@gentoo.org>
  leafnode-2.0.0_alpha20070108.ebuild:
  Drop bindnow-flags, bug #227011.

  23 Mar 2007; Sven Wegener <swegener@gentoo.org> -leafnode-1.11.3.ebuild,
  -leafnode-1.11.4.ebuild, +leafnode-1.11.6.ebuild:
  Version bump. Cleanup.

  13 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  leafnode-1.11.5.ebuild:
  Stable on sparc wrt #167718

  05 Mar 2007; Raúl Porcel <armin76@gentoo.org> leafnode-1.11.5.ebuild:
  x86 stable wrt bug 167718

*leafnode-2.0.0_alpha20070108 (18 Feb 2007)

  18 Feb 2007; Sven Wegener <swegener@gentoo.org>
  -leafnode-2.0.0_alpha20060831.ebuild,
  +leafnode-2.0.0_alpha20070108.ebuild:
  Version bump in the development series.

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  leafnode-1.11.5.ebuild:
  ppc stable

*leafnode-2.0.0_alpha20060831 (06 Oct 2006)

  06 Oct 2006; Sven Wegener <swegener@gentoo.org>
  -leafnode-2.0.0_alpha20060711.ebuild,
  +leafnode-2.0.0_alpha20060831.ebuild:
  Version bump in the development series.

*leafnode-2.0.0_alpha20060711 (09 Aug 2006)

  09 Aug 2006; Sven Wegener <swegener@gentoo.org>
  -leafnode-2.0.0_alpha20060321.ebuild,
  +leafnode-2.0.0_alpha20060711.ebuild: