@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/leafnode
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/leafnode/ChangeLog,v 1.35 2011/07/31 12:34:45 patrick Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/leafnode/ChangeLog,v 1.36 2012/02/11 11:54:25 ago Exp $
+
+  11 Feb 2012; Agostino Sarubbo <ago@gentoo.org> leafnode-1.11.8.ebuild:
+  Fixed dodoc failure, convert src_install to emake, port to EAPI4
 
 *leafnode-1.11.8 (31 Jul 2011)
 
